# django-backend

./: .gitignore  README.md  pyproject.toml
accounts/: models.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
code_info/: models.py  services.py  urls.py  views.py
config/: .env  settings.py  urls.py
llm/: chat.py  models.py  urls.py  views.py
question_info/: models.py  services.py  urls.py  views.py
tmp/: models.py
utils/: enums.py  exceptions.py  middlewares.py  paginator.py  result.py
utils/code_test/: code_test.py
utils/code_test/testcases/956A/: 1.out  2.out
utils/code_test/testcases/956B/: 0.out  1.out  2.out  3.out  4.out
utils/code_test/testcases/956C/: meow.out
utils/code_test/testcases/956D/: 1.in  2.in  3.in  3.out  4.in
utils/code_test/testcases/956E/: 1.in  2.in  3.in  3.out  4.in  5.in  6.in
utils/code_test/testcases/956F/: data.in  data.out
utils/code_test/testcases/956G/: 1.in  2.in  4.in  6.in
utils/code_test/testcases/956H/: 1.in  1.out  2.in  5.in  6.in  6.out
utils/code_test/testcases/956I/: 1.in  10.in  11.in  12.in  13.in  14.in  15.in  16.in  16.out  17.in  18.in  19.in  2.in  20.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
utils/code_test/testcases/956J/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in
utils/code_test/testcases/957A/: in2.txt  out2.txt
utils/code_test/testcases/957B/: 4.in
utils/code_test/testcases/957C/: in.txt  in2.txt  in3.txt  in4.txt  out.txt  out2.txt  out3.txt  out4.txt
utils/code_test/testcases/957D/: in01.txt  in02.txt  in03.txt  in04.txt  in05.txt  (+4 more)
(+1381 files in other folders)
