[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = ""
authors = ["Sora <7641501+ryunosukeakasaka@user.noreply.gitee.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
django = "^5.2"
mysqlclient = "^2.2.7"
setuptools = "^78.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"